tests/NormalTests/paczka1/fuzzy1/18521686.err
Error in line 2: U1f S929 52,7
Error in line 4: S929 S952 98,8
Error in line 5: noiRx7VaO S138 88,6
Error in line 19: BKbyU S801 30,5
Error in line 25: BKbyU S929 53,5
